- Window resizing issue fixed (MOBILE) - Minor visual changes in GameScreen - user-select: none ~ prevents elements from being selected on mobile

--- a/src/style/DelayTimer.css
+++ b/src/style/DelayTimer.css
@@ -2,7 +2,7 @@
   font-size: 8vh;
   font-family: Montserrat;
   font-style: normal;
-  font-weight: normal;
+  font-weight: bold;
   color: orange;
   text-decoration: underline;
 }
@@ -11,7 +11,7 @@
   font-size: 8vh;
   font-family: Montserrat;
   font-style: normal;
-  font-weight: normal;
+  font-weight: bold;
   color: orange;
   transform: rotate(180deg);
   text-decoration: underline;
