--- a/src/style/EditScreen.css
+++ b/src/style/EditScreen.css
@@ -11,6 +11,8 @@
   align-items: center;
   justify-content: flex-start;
   position: absolute;
+  user-select: none;
+
   width: 100%;
   height: 100%;
   background: linear-gradient(
@@ -129,7 +131,7 @@
   border-radius: 10px;
   border: none;
 
-  font-size: 3.5vh;
+  font-size: calc(0.8vw + 22px);
   color: white;
   font-weight: bold;
 }
@@ -178,8 +180,6 @@
   aspect-ratio: 1/1;
 
   font-size: 1em;
-
-  user-select: none;
 }
 
 .TimeIterations__text {
