--- a/src/style/TitleScreen.css
+++ b/src/style/TitleScreen.css
@@ -4,6 +4,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
+  user-select: none;
 
   width: 100%;
   height: 100%;
@@ -107,7 +108,7 @@
   border-radius: 10px;
   border: none;
 
-  font-size: 3.5vh;
+  font-size: calc(0.8vw + 22px);
   color: white;
   font-weight: bold;
 }
